# flkl

./: .gitignore  pyproject.toml
config/: test-sample.yaml  train-sample.yaml
flkl/: test2.py  training.py
ino/: ino.ino
src/flkl/: blink.py  calibrate.py  share.py  test.py  train.py
src/flkl/analysis/: draw_training_progress.R  extract_activity_from_s2p_plane.py  merge_behavior_data.py
src/flkl/bhv/: blink.py  share.py  test.py  train.py
